# Algorithmic-Trading-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  launch.bat  launch.sh  run.bat  run_simulation.bat  run_simulation.ps1
include/: logger.hpp  market.hpp  order.hpp  order_book.hpp  simulation.hpp  trader.hpp
logs/: simulation_summary.json
src/: logger.cpp  main.cpp  market.cpp  order_book.cpp  simulation.cpp  trader.cpp
